# University

./: .gitignore  .gitmodules  Output.j  README.md
ASD/strutture_dati/: List.c  bTree.c  kTree.c  open-Hash.c  parent-bTRee.c
ASD/strutture_dati/headers/: List.h  concat-Hash.h
Algoritmi e Strutture Dati/: Esercizio3.cpp  Esercizio4.cpp  Makefile
Algoritmi e Strutture Dati/Strutture dati/: bTree.c
Algoritmi e Strutture Dati/strutture_dati/: List.c  Queue.c  bTree.c  kTree.c  parent-bTRee.c
Algoritmi e Strutture Dati/strutture_dati/headers/: List.h  Queue.h  bTree.h  kTree.h
CV/: CurriculumVitae.tex  Lettera Stage.txt  cover_letter_grenoble.typ
CV/tex/: CurriculumVitae.tex
CV/typst/: cv.typ  metadata.toml
CV/typst/cover_letters/: letter_amadeus.typ  letter_apple.typ  letter_arm.typ  letter_blue_ortho.typ  letter_d3s.typ
CV/typst/modules_en/: certificates.typ  education.typ  exams.typ  projects.typ  publications.typ  skills.typ
CV/typst/src/: publications.bib
DB/esami passati/07-07-2020/: es2.sql
EGI/: Fashion-interviste.md  Fashion-pt1.md  Summary_Script.ipynb
EGID/: Summary_Script.ipynb
ENSIMAG/GPUC/: project_list.md
ENSIMAG/GPUC/lab02/: CMakeLists.txt  gemm_blas.h  gemm_kernel.cuh  gemm_noblas.h  main_cpu.cxx  main_gpu.cu  matrix_utils.h  timing.txt
ENSIMAG/IS/HospitalSystem/: .project  HospitalSystem.notation  HospitalSystem.uml
ENSIMAG/refresh/: matrices.typ  matrix.ipynb  optimization.typ  requirements.txt
EPS/: Consegna3.R  Pag_269.R
EPS/esercizi/: dump.R  esercizi.R
IAIML/assignment1/: Assignment1.ipynb
IAIML/assignment2/: in3050_in4050_2023_assignment_2.ipynb
IAIML/assignment3/: IN3050_assignment_3.ipynb  syntheticdata.py
IAIML/numpyclassifiers/: linear_regression.py  logistic_regression.py  numpy_classifier.py
IAIML/week01/: test-notebook.ipynb
IAIML/week02/: IN3050_w2.ipynb
IAIML/week03/: IN3050_w3.ipynb
IAIML/week04/: IN3050_w4.ipynb
IAIML/week05/: IN3050_2023_w5.ipynb
IAIML/week06/: in3050_2023_w6.ipynb
IAIML/week07/: in3050_2023_w7.ipynb  in3050_2023_w7_solutions.ipynb
IAIML/week08/: IN3050_2023_w8.ipynb
IAIML/week10/: Unsupervised Learning.ipynb
IAIML/week11/: IN3050_w10.ipynb  week10.py
IAIML/week12/: IN3050_w12.ipynb  gridworld.py  policies.py
LFT/: LFT_Lab2122.pdf:Zone.Identifier  Valutatore.java:Zone.Identifier
LFT/File_Prova/: factorial.lft:Zone.Identifier
LFT_lab/: CodeGenerator.java  Grammatica 2 con STD On-The-Fly.txt  Guide.java  Instruction.java  Lexer.java  Lexer_2x1.java  Lexer_2x2.java  Lexer_2x3.java  NumberTok.java  OpCode.java  Parser.java  Parser3x1.java  Parser3x2.java  SymbolTable.java  Tag.java  Token.java  Translator.java  Translator5x2.java  Valutatore.java  Word.java  first_follow_guide.txt  first_follow_guide2.txt  first_follow_guide2x2.txt  prova.txt
LFT_lab/Automi 1.x/: ex_1x1.java  ex_1x2.java  ex_1x3.java  ex_1x4.java  ex_1x5.java  ex_1x6.java
LFT_lab/File_Prova/: and_or_moodle.lft  esempio_semplice.lft  factorial_5x2.lft  max_tre_num.lft  prova.lft  test_lexer.lft
LPP/: CountCapitalWords.hs  FilteringApples.java  Main.java  PrimoScript.hs  RecursiveTypes.hs  Trees.hs  exam-2023-01-17.hs
LPP/esami/: Album.java
LPP/facsimile/: 1.hs  3.hs  4.hs  simulazioneOnline.hs
MFI/: .gitignore  Boolean.agda  Demo.agda  Lists.agda  Naturals.agda  README.md  nat.agda
MFI/Code/: AexpBexp.agda  BigStep.agda  Code.agda-lib  CompilerEx.agda  ConjDisj.agda  Equalities.agda  Esonero.agda  Exists.agda  HoareLogic.agda  HoareSoundness.agda  Inequality.agda  Lambda.agda  Lists.agda  Naturals.agda  Negation.agda  Polymorphism.agda  Predicates.agda  SmallStep.agda  VerificationConditions.agda
P3/esercizi/es2/: Calculator.java  Geometries.java  Main.java  Parallelogram.java  Polygon.java  Queue.java  Rectangle.java
P3/esercizi/kernelmodulo/: Main.java  SortableArray.java  SortableList.java  SortableListImpl.java
P3/esercizi/mvc/: Model.java  View.java
PoliTO/ASE/lab/: .gitignore  README.md
PoliTO/ASE/lab/extrapoints/Quoridor/tmp/quoridor/Quoridor/: CMakeCache.txt  CMakeLists.txt
PoliTO/BDPA/: .gitignore  exam_material.typ
PoliTO/DSDBT/SOFTWARE/: README.txt
PoliTO/DSDBT/exams/: exam.md
PoliTO/DSDT/SOFTWARE/: README.txt
PoliTO/MLPR/: environment.yml
SO/: README.md
SO/unix_lab/: es1.c  loop-zero.c
SO/unix_lab/Esempi (PIPE e FIFO)-20211119/: 04-test-pipe-kids.c  05-test-dup2_simple.c
SO/unix_lab/lezione 1/: moltiplicazione.h  somma.h  sommaprodotto
Sviluppo Applicazioni Software/: mod-dom fine lezione .uxf
Sviluppo Applicazioni Software/Esercizi/: PilaComposite.uxf
Sviluppo Applicazioni Software/UML/: Gestire_Menu.uxf
Sviluppo Applicazioni Software/UML/Gestire i compiti della cucina/: Gestire i Compiti della Cucina-ext4.uxf  Gestire i Compiti della Cucina.uxf
UniTO/ASD/Laboratorio-Algoritmi/: .gitignore  Makefile  build.gradle
UniTO/ASD/progetto/: settings.gradle
UniTO/ASD/strutture_dati/: List.c  bTree.c  concat-Hash.c  kTree.c  parent-bTRee.c
UniTO/Bachelor-Thesis/: .gitignore  Makefile  README.md  main.typ  works.yml
UniTO/Bachelor-Thesis/chapters/: conclusions.typ  digital-twins.typ  introduction.typ  overview-of-the-greenhouse.typ  raspberries-responsabilities-and-physical-setup.typ  semantic-lifting.typ  smol.typ  software-components.typ  tools-and-technologies.typ
UniTO/Bachelor-Thesis/utils/: common.typ  (+1 more)
UniTO/EGID/: Summary_Script.ipynb
UniTO/IAIML/: .pre-commit-config.yaml  evolutionary_algorithm.py
UniTO/LPP/: Book.java  CostruttoriConArgomenti.hs  FastSqrt.java  InsiemeDelleParti.hs  PrimoScript.hs  Telegram.hs  Trees.hs  assoluto.hs  morraCinese.hs
UniTO/MFI/: README.md
eps/: quiz_28_01_2021.R
unix_lab/Esempi (PIPE e FIFO)-20211119/: 01-test-pipe.c  01-test-pipe_v2  01-test-pipe_v2.c  02-test-pipe-single  03a-pipe-command.c  04-test-pipe-kids.c  05-test-dup2_simple  05-test-dup2_simple.c  05a-test-fd-redir  05a-test-fd-redir.c  06-test-fifo-client  06-test-fifo-client.c  06b-test-fifo-server  06b-test-fifo-server.c
unix_lab/lezione 1/: applicazione.c  makefile  moltiplicazione.c  moltiplicazione.h  somma.c  somma.h
(+730 files in other folders)
